[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Treasure1.png" type="Texture" id=1]
[ext_resource path="res://Art/Treasure3.png" type="Texture" id=2]
[ext_resource path="res://Art/Empty Slot.png" type="Texture" id=3]
[ext_resource path="res://Art/Treasure2.png" type="Texture" id=4]
[ext_resource path="res://InventroySlot.gd" type="Script" id=5]
[ext_resource path="res://Fonts/PixelFont2.tres" type="DynamicFont" id=6]
[ext_resource path="res://Art/Board.png" type="Texture" id=7]

[node name="InventroySlot" type="TextureRect"]
anchor_right = 0.075
anchor_bottom = 0.0975
margin_right = -27.0
margin_bottom = -21.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 18.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
centered = false

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 19.0
margin_right = 104.0
margin_bottom = 36.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -6.5
margin_right = 27.0
margin_bottom = 6.5
custom_fonts/font = ExtResource( 6 )
text = "Sell: 500"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
